--- a/app.json
+++ b/app.json
@@ -23,7 +23,7 @@
     },
     "EN2DEKEY":{
       "description": "加/解密密钥，随机字符串即可",
-      "value": "ZgN2tj1ETs"
+      "value": "GUIuihhuUH"
     },
     "EMAIL":{
       "description": "邮箱",
